assets/styles/styles.css
/*********************** BODY *****************************/
body {
    background-color: white;
    padding-top: 3rem;
}


/*****************************HTML*************************/
h1, h2 {
    text-align: center;
    margin: 0.5em 0;
}

h1 {
    color: #ce352c;
}
h1 select {
    color: #ce352c;
}

.required:after {
    content:" *";
    color: red;
}

.flash-messages {
    margin-top: 1em;
}

.main-container {
    padding-bottom: 6em;
}

.form-inline-radio {
    display: flex;
    justify-content: space-around;
}

.form-inline-radio .form-check-input {
    position: relative;
    padding-left: 0;
    margin-left: 0;
}

table thead tr {
    background-color: #ce352c;
    color: white;
}
table tbody tr {
    background-color: #e6e6e6;
}
table tbody a {
    color: black;
}

.facts {
    border-radius: 2em;
    background-color: #ce352c;
    color: white;
    padding: 0.25em 0 0.15em 0;
    margin-top: 1em;
}

.rdi-card-icon {
    overflow: hidden;
    min-height: 19rem;
}
.rdi-card-icon > i {
    position: absolute;
    left: 10%;
    top: 10%;
    font-size: 10em;
    color: rgba(0, 0, 0, 0.08);
}
.rdi-card-icon > * {
    z-index: 2;
}
.rdi-card-icon > i {
    z-index: 1;
}

.card.bg-light-grey {
    background-color: #e9ece6;
    min-height: 100px;
}
.card.bg-light-grey .progress {
    background-color: white;
}

.col-4.bis {
    min-width: 50.5%;
}

h2.facts {
    margin-top: 5%;
}

.table-hover {
    background-color: rgb(173, 166, 166);
}
.opacity-100{
    opacity: 1;
}
.opacity-75{
    opacity: 0.75;
}
.opacity-50{
    opacity: 0.5;
}
.opacity-25{
    opacity: 0.25;
}
.font-weight-bold-unset{
    font-weight: unset !important;
}
.text-grey{
    color: #9b9b9b !important;
}
.table-grey-light, .table-grey-light > th, .table-grey-light > td {
    background-color: #f5f5f5;
}

/**************************** NAV ************************/
nav.navbar{
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 9999;
}
.navbar-dark {
    background-color: #ce352c;
}
.navbar-dark .navbar-nav .nav-link {
    color: white;
}
.navbar-dark .navbar-nav .nav-link.disabled {
    color: rgba(255, 255, 255, 0.5);
}
.navbar-dark .navbar-nav .nav-link:hover {
    color: rgba(255, 255, 255, 0.8);
}
.navbar .navbar-brand {
    padding-top: 0;
    padding-bottom: 0;
}
.navbar .navbar-brand img {
    max-height: 32px;
}
.navbar .user-menu a {
    cursor: pointer;
}
.navbar .nav-item.active {
    background-color: rgba(255, 255, 255, 0.15);
}
.navbar .dropdown-menu a {
    padding-left: 2.5rem;
}
.navbar .dropdown-menu a i {
    margin-left: -1.5rem;
    width: 1.5rem;
}

/*****************************HEADER **********************/
header {
    display: flex;
    justify-content: center;
    background-color: #ce352c;
}

h5 {
    display: inline-block;
}

.img-uploaded-container .img-thumbnail {
    width: 200px !important;
    height: 200px !important;
}

/**
 * Jours travaillés
 */
.calmonth-row {
    display: flex;
    justify-content: space-around;
}
.btn-jour {
    position: relative;
    margin: 0.2em;
    padding: 0.4em;
    text-align: right;
}
.btn-block + .btn-block {
    /* Overrides bootstrap style to fix agenda alignment */
    margin-top: 0.2em;
}

.demi-journee {
    display: none;
    position: absolute;
    left: 0.25em;
    bottom: 0;
}

/*********************************************** RESPONSIVE DESIGN *******************************************/

@media (min-width: 575px) {
    .text-month {
    min-width: 10em;
    display:inline-block;
    }
}

@media (max-width: 992px) {
    h1 {
        font-size: 2em;
    }

    h2 {
        font-size: 1.5em;
    }

    h3 {
        font-size: 1.25em;
    }
}

@media (max-width: 992px) {
    div.bordure.contributeurs {
        display: none;
    }
}

@media (min-width: 575px) {
    .btn-jour {
        padding: 0.2em 0.4em 0.6em 0.4em;
        font-size: 1.25em;
    }

    /* Affiche demi journee 1/2 seulement sur ecran sm et bouton demi journee */
    .btn-jour.calmonth-day-05 .demi-journee {
        display: inline;
    }
}

.btn-jour span {
    font-weight: bold;
}

@media (min-width: 300px) and (max-width: 575px) {
    div.row.projet {
        max-width: 12%;
    }
}

.cron-schedule-input {
    display: flex;
    flex-wrap: wrap;
    align-items: baseline;
}
.cron-schedule-input select {
    width: auto;
    margin: 0 0.5em;
}

.datepicker td, .datepicker th {
    border-radius: 0;
}

.highlight-text {
    position: relative;
    z-index: 1;
    padding: 0 0.25em;
    margin: 0 -0.25em;
}
.highlight-text::after {
    content: "";
    display: inline-block;
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: -1;
    top: 0;
    left: 0;
    background: linear-gradient(to top, #28a745a0 40%, transparent 40%);
    animation-name: 'highlight';
    animation-duration: 0.75s;
}

@keyframes highlight {
    0% {
        width: 0;
        opacity: 0;
    }
    50% {
        width: 100%;
        opacity: 1;
    }
}

.rdi-percent sup {
    font-size: 0.3em;
    top: 0;
}

.rdi-verification-code {
    letter-spacing: 0.25em;
    font-size: 1.5em;
    font-family: monospace;
}

.mes-societes-create {
    border-style: dashed;
    border-width: 0.2em;
}

.table a:not(.stretched-link) {
    position: relative;
    z-index: 2;
}

.projet-actions {
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: flex-end;
    height: 100%;
}
@media (min-width: 992px) {
    .projet-actions {
        justify-content: flex-start;
    }
}
.projet-actions a {
    margin: 0 0.5em 1em 0;
}

.p-2-3 {
    padding: 0.75em;
}

